Fix layout issues

--- a/src/app/components/media/media-detail/media-detail.component.scss
+++ b/src/app/components/media/media-detail/media-detail.component.scss
@@ -1,6 +1,6 @@
 .hero-bg {
     align-items: stretch;
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
