--- a/src/app/components/pages/home-page/home-page.component.scss
+++ b/src/app/components/pages/home-page/home-page.component.scss
@@ -1,7 +1,7 @@
 .hero-bg,
 .hero-gradient {
     align-items: stretch;
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
